--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ body{
   color: white;
   text-align: center;
   padding: 20px;
+  margin:20px;
 }
 /* Section classes */
 .below-navbar{
@@ -26,6 +27,7 @@ body{
   border-color: transparent;
   padding: 40px;
   font-size: 18px;
+  margin-bottom: 0px;
 }
 #myNavbar .navbar-toggle{  /* Navbar toggle */
   border-color: white;
@@ -104,9 +106,40 @@ body{
 }
 
 /* Projects */
+
+/* Portfolio Item */
 .portfolio_item{
   padding:0;
 }
+
+/* Hover effect for portfolio_item*/
+.hover_effect{
+  position: relative;
+}
+/* Hover content */
+.hover_effect .overlay{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+
+  color: white;
+  text-align: center;
+  font-family: 'Source Sans Pro', sans-serif;
+
+  opacity: 0;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+}
+.hover_effect:hover .overlay{
+  opacity: 1;
+}
+/* Hover heading 2 */
+.hover_effect h4{
+  font-style: italic;
+}
+
 
 /* Mobile first approach */
 /* For screens larger than 768px */
