--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,10 @@
 body{
   background-color: #222;
 }
+hr{
+  border-color: #ccc;
+}
 
-/* Misc */
 /* Section Title */
 .section-title{
   color: white;
@@ -13,16 +15,6 @@ body{
 /* Section classes */
 .below-navbar{
   margin-top: 134px;
-}
-blockquote{
-  border: none;
-}
-hr{
-  width: 20px;
-  border-width: 2px;
-  border-color:#777;
-  margin-top: 40px;
-  margin-bottom: 0px;
 }
 
 /*Home Navbar */
@@ -107,13 +99,23 @@ hr{
 #bio{
   background-color: white;
   font-family: 'Source Sans Pro', sans-serif;
-  font-size: 20px;
+}
+#bio .brief{
   padding: 5%;
   text-align: center;
+  font-size: 20px;
+}
+#bio .brief hr{
+  width: 20px;
+  border-width: 2px;
+  border-color:#777;
+  margin-top: 40px;
+  margin-bottom: 0px;
 }
 /* Bio Quotes */
 #bio blockquote{
   font-size: 20px;
+  border: none;
 }
 
 /* Projects */
@@ -151,6 +153,24 @@ hr{
   font-style: italic;
 }
 
+/* Bio Resume */
+.resume{
+  font-size: 18px;
+  padding: 40px;
+}
+.resume h2{
+  font-weight: bold;
+}
+.resume .date{
+}
+.resume .title{
+  font-weight: bold;
+}
+.resume .sub_title{
+  font-style: italic;
+  text-align: right;
+}
+
 
 /* Mobile first approach */
 /* For screens larger than 768px */
@@ -160,20 +180,11 @@ hr{
     font-size:110px;
   }
   /*Bio text*/
-  #bio{
+  #bio .brief{
     font-size: 22px;
   }
   /*Bio Quotes*/
   #bio blockquote{
     font-size: 22px;
-  }
-  /* Make row thing it is a table when screen is big */
-  .row {
-    display: table;
-  }
-  [class*="col-"] {
-    float: none;
-    display: table-cell;
-    vertical-align: middle;;
   }
 }
