--- a/css/animations.css
+++ b/css/animations.css
@@ -1,8 +1,15 @@
 /* CSS3 Animations */
 @keyframes slideUp {
-  from{transform:translate3d(0,100%,0);}
-  to{transform: none;}
+  from{opacity: 0; transform:translate3d(0,100%,0);}
+  to{opacity: 1; transform: none;}
 }
 .slideUp{
-  animation: slideUp 1s;
+  animation: slideUp 0.8s;
+}
+@keyframes fadeIn {
+  from{opacity: 0;}
+  to{opacity: 1;}
+}
+.fadeIn{
+  animation: fadeIn 1s;
 }
